# codeanalyzer-typescript

./: .gitignore  404.html  CLAUDE.md  README.md  astro.config.mjs  index.html  package.json  schema-uml.drawio  schema.neo4j.json  sitemap-0.xml  sitemap-index.xml
.codeanalyzer/: analysis_cache.json
.github/: configuration.json
.github/workflows/: release.yml
_astro/: Search.astro_astro_type_script_index_0_lang.BOXmnYMs.js  arc.CNFU9aHb.js  architectureDiagram-3BPJPVTR.D5A93x7F.js  blockDiagram-GPEHLZMM.CltDqnAu.js  c4Diagram-AAUBKEIU.CPeC0MlY.js  channel.4pS0G469.js  chunk-2J33WTMH.Df1vcUHZ.js  chunk-4BX2VUAB.BVF89pIu.js  chunk-55IACEB6.Ci3ncBMm.js  chunk-727SXJPM.BQjnPAmC.js  chunk-AQP2D5EJ.lP4r_B8i.js  chunk-FMBD7UC4.BxumuUaG.js  chunk-ND2GUHAM.CSTOcYL2.js  chunk-QZHKN3VN.Cd3qP2rt.js  classDiagram-v2-Q7XG4LA2.BVGlFp2E.js  cose-bilkent-S5V4N54A.D753Wqxl.js  dagre-BM42HDAG.Q5wCeOwA.js  diagram-2AECGRRQ.CqIpanc9.js  diagram-5GNKFQAL.Bmi0aHEW.js  diagram-KO2AKTUF.CzUo5t_0.js  diagram-LMA3HP47.vmKPbhml.js  diagram-OG6HWLK6.tOwgpgAK.js  ec.bdoyy.css  erDiagram-TEJ5UH35._vnH2NT0.js  flowDiagram-I6XJVG4X.BNQYaYdI.js  ganttDiagram-6RSMTGT7.i76Q7m7e.js  gitGraphDiagram-PVQCEYII.BCUeZ_Jd.js  index.CGKSN4Ly.css  infoDiagram-5YYISTIA.DP5wcyFU.js  ishikawaDiagram-YF4QCWOH.FWkd8Ho5.js  journeyDiagram-JHISSGLW.BLm2J55U.js  kanban-definition-UN3LZRKU.C7m1zO9R.js  linear.Ep_fk-Dx.js  mermaid.core.CBrstYC9.js  mindmap-definition-RKZ34NQL.CVyf9Lk9.js  page.CtTLA21y.js  pieDiagram-4H26LBE5.Bqm8MGZI.js  preload-helper.Cne-JLrd.js  quadrantDiagram-W4KKPZXB.Y0oo3YNu.js  requirementDiagram-4Y6WPE33.O63FxIoi.js  (+10 more)
guides/call-graph/: index.html
guides/cli-usage/: index.html
guides/concepts/: index.html
guides/level-2/: index.html
guides/neo4j/: index.html
installing/: index.html
packaging/homebrew/: generate_formula.sh
packaging/install/: cants-installer.sh
packaging/python/: README.md  build_wheels.sh  pyproject.toml
packaging/python/src/codeanalyzer_typescript/: __init__.py  __main__.py
packaging/python/src/codeanalyzer_typescript/_bin/: .gitignore
pagefind/: pagefind-entry.json  pagefind.en_ece9612eb2.pf_meta
pagefind/fragment/: en_472641c.pf_fragment  en_5755a19.pf_fragment  en_6c55f6c.pf_fragment  en_82c5354.pf_fragment  en_88c45ca.pf_fragment  en_8ca28cb.pf_fragment  en_8d5ae6a.pf_fragment  en_8f94753.pf_fragment  en_a7b472c.pf_fragment  en_bdbfc39.pf_fragment  en_cad3b05.pf_fragment  en_eaa23ee.pf_fragment
pagefind/index/: en_ad2c717.pf_index  en_b32983f.pf_index
patches/: @cs-au-dk%2Fjelly@0.13.0.patch
quickstart/: index.html
reference/cli/: index.html
reference/neo4j-schema/: index.html
reference/schema/: index.html
scripts/: update-readme.ts
src/: cli.ts  core.ts  index.ts  main.ts
src/components/: Neo4jPropertyGraph.astro
src/content/docs/: index.mdx  installing.mdx  quickstart.mdx  what-is-codeanalyzer.mdx
src/content/docs/guides/: call-graph.mdx  cli-usage.mdx  concepts.mdx  level-2.mdx  neo4j.mdx
src/content/docs/reference/: cli.mdx  neo4j-schema.mdx  schema.mdx
src/options/: options.ts
src/schema/: schema.ts
src/semantic_analysis/: callGraph.ts  index.ts  jellyProvider.ts  provider.ts
src/styles/: docs.css
src/syntactic_analysis/: builders.ts
src/utils/: serialize.ts
test/: neo4j-bolt.test.ts  neo4j-schema.test.ts  synthesized-nodes.test.ts  union-provider.test.ts
test/fixtures/sample-app/.codeanalyzer/: analysis_cache.json
what-is-codeanalyzer/: index.html
