[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeanalyzer-typescript"
dynamic = ["version"]
description = "Prebuilt codeanalyzer-typescript backend binary for CLDK (codellm-devkit)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "Rahul Krishna", email = "i.m.ralk@gmail.com" },
]
keywords = ["cldk", "codellm-devkit", "typescript", "code analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://codellm-devkit.info"
Repository = "https://github.com/codellm-devkit/codeanalyzer-ts"

# Installs a `cants` launcher on PATH that exec()s the bundled binary
# (see src/codeanalyzer_typescript/__main__.py). CLDK still locates the binary
# directly via bin_path(); this is purely for direct shell use.
[project.scripts]
cants = "codeanalyzer_typescript.__main__:main"

# Single source of truth for the package version: __init__.py's __version__.
# build_wheels.sh overwrites it from $PKG_VERSION (set to the git tag in CI), so a
# tag of vX.Y.Z always produces a codeanalyzer-typescript==X.Y.Z wheel.
[tool.hatch.version]
path = "src/codeanalyzer_typescript/__init__.py"

# The compiled binary lives under _bin/ and is gitignored (it is produced per
# platform at build time). `artifacts` re-includes it in the wheel anyway, so the
# gitignored binary still ships inside the built wheel.
[tool.hatch.build.targets.wheel]
packages = ["src/codeanalyzer_typescript"]
artifacts = ["src/codeanalyzer_typescript/_bin/*"]

[tool.hatch.build.targets.sdist]
# No meaningful sdist: the binary cannot be built without Bun, so we ship
# platform wheels only. Keep the sdist minimal for metadata completeness.
include = [
    "src/codeanalyzer_typescript/__init__.py",
    "README.md",
    "build_wheels.sh",
]
